--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,5 +6,5 @@
     "password": "haniyeh74639037463903",
     "database": "todoapp",
     "entities": ["dist/**/**.entity{.ts,.js}"],
-    "synchronize": false
+    "synchronize": true
    }
